@@ -34,3 +34,4 @@ v1.3
 v1.4
 -Change: New recipe for Reproducer
 -CHange: Blaze armour model and effects
+-Added: Undertaker
